--- a/pom.xml
+++ b/pom.xml
@@ -74,9 +74,9 @@ limitations under the License.
             <version>1.6.1</version>
         </dependency>
         <dependency>
-            <groupId>org.mortbay.jetty</groupId>
-            <artifactId>com.springsource.org.mortbay.jetty.server</artifactId>
-            <version>6.1.9</version>
+         <groupId>org.mortbay.jetty</groupId>
+            <artifactId>jetty</artifactId>
+            <version>6.1.26</version>
         </dependency>
         <dependency>
             <groupId>org.mortbay.jetty</groupId>
