--- a/demo/src/main/resources/log4j.properties
+++ b/demo/src/main/resources/log4j.properties
@@ -1,3 +1,3 @@
-log4j.rootCategory=INFO, CONSOLE
+log4j.rootCategory=WARN, CONSOLE
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
