--- a/oai2-plugin/pom.xml
+++ b/oai2-plugin/pom.xml
@@ -20,12 +20,12 @@ limitations under the License.
     <parent>
         <groupId>org.socialhistoryservices.solr</groupId>
         <artifactId>oai4solr</artifactId>
-        <version>1.0</version>
+        <version>${project.version}</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>oai2-plugin</artifactId>
-    <version>1.0</version>
+    <version>${project.version}</version>
     <packaging>jar</packaging>
 
     <build>
