--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,7 @@ limitations under the License.
     </developers>
 
     <properties>
-        <project.version>3.x-1.0</project.version>
+        <project.version>3</project.version>
         <solr.version>3.6.2</solr.version>
     </properties>
 
