--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -26,7 +26,7 @@ limitations under the License.
     </parent>
 
     <artifactId>demo</artifactId>
-    <version>${project.version}</version>
+    <version>4.1</version>
 
     <packaging>jar</packaging>
 
@@ -66,6 +66,17 @@ limitations under the License.
                                     <mainClass>org.socialhistoryservices.api.oai.Demo</mainClass>
                                 </transformer>
                             </transformers>
+                            <!-- Some jars are signed, so we need to filter them out. -->
+                            <filters>
+                                <filter>
+                                    <artifact>*:*</artifact>
+                                    <excludes>
+                                        <exclude>META-INF/*.SF</exclude>
+                                        <exclude>META-INF/*.DSA</exclude>
+                                        <exclude>META-INF/*.RSA</exclude>
+                                    </excludes>
+                                </filter>
+                            </filters>
                         </configuration>
                     </execution>
                 </executions>
@@ -95,7 +106,6 @@ limitations under the License.
             <artifactId>saxon-dom</artifactId>
             <version>8.7</version>
         </dependency>
-
     </dependencies>
 
 </project>
