--- a/oai2-plugin/pom.xml
+++ b/oai2-plugin/pom.xml
@@ -20,7 +20,7 @@ limitations under the License.
     <parent>
         <groupId>org.socialhistoryservices.solr</groupId>
         <artifactId>oai4solr</artifactId>
-        <version>${project.version}</version>
+        <version>4.1</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
