--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@ limitations under the License.
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.socialhistoryservices.solr</groupId>
     <artifactId>oai4solr</artifactId>
-    <version>${project.version}</version>
+    <version>3.1</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -74,8 +74,8 @@ limitations under the License.
     </developers>
 
     <properties>
-        <project.version>3</project.version>
         <solr.version>3.6.2</solr.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
 </project>
