--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -65,6 +65,8 @@ limitations under the License.
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>org.socialhistoryservices.api.oai.Demo</mainClass>
                                 </transformer>
+                                <transformer
+                                        implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                             </transformers>
                             <!-- Some jars are signed, so we need to filter them out. -->
                             <filters>
