Add srw plugin. Status: monkey work. Needs some decent unit tests, so no merging with the stable branch.

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@ limitations under the License.
 
     <modules>
         <module>oai2-plugin</module>
+        <module>srw-plugin</module>
         <module>demo</module>
     </modules>
 
