--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -22,11 +22,11 @@ limitations under the License.
     <parent>
         <groupId>org.socialhistoryservices.solr</groupId>
         <artifactId>oai4solr</artifactId>
-        <version>4.1</version>
+        <version>5.1</version>
     </parent>
 
     <artifactId>demo</artifactId>
-    <version>4.1</version>
+    <version>5.1</version>
 
     <packaging>jar</packaging>
 
@@ -45,8 +45,8 @@ limitations under the License.
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -88,16 +88,16 @@ limitations under the License.
     </build>
 
     <dependencies>
-        <dependency>
-            <groupId>org.mortbay.jetty</groupId>
-            <artifactId>jetty</artifactId>
-            <version>6.1.14</version>
-        </dependency>
-        <dependency>
-            <groupId>org.mortbay.jetty</groupId>
-            <artifactId>jsp-2.1</artifactId>
-            <version>6.1.14</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.mortbay.jetty</groupId>-->
+            <!--<artifactId>jetty</artifactId>-->
+            <!--<version>6.1.14</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>org.mortbay.jetty</groupId>-->
+            <!--<artifactId>jsp-2.1</artifactId>-->
+            <!--<version>6.1.14</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>net.sf.saxon</groupId>
             <artifactId>saxon</artifactId>
