--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@ limitations under the License.
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.socialhistoryservices.solr</groupId>
     <artifactId>oai4solr</artifactId>
-    <version>4.1</version>
+    <version>5.1</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -63,7 +63,7 @@ limitations under the License.
 
     <organization>
         <name>International Institute of Social History</name>
-        <url>www.socialhistoryservices.org</url>
+        <url>www.socialhistory.org</url>
     </organization>
 
     <developers>
@@ -74,7 +74,7 @@ limitations under the License.
     </developers>
 
     <properties>
-        <solr.version>4.7.1</solr.version>
+        <solr.version>5.5.4</solr.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
